[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network/GameContainer/GameContainer.gd" type="Script" id=1]

[node name="GameContainer" type="Node"]
script = ExtResource( 1 )

[node name="Timer1" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="cell_click" from="." to="." method="_on_GameContainer_cell_click"]
[connection signal="game_button_click" from="." to="." method="_on_GameContainer_game_button_click"]
[connection signal="release_right_click" from="." to="." method="_on_GameContainer_release_right_click"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
